Using mousedown, mouseup, mouseover and mouseout to "select" the two cells to swap

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <p>row   : <span id="details-row"></span></p>
     <p>col   : <span id="details-col"></span></p>
     <p>color : <span id="details-color"></span></p>
+    <p>status : <span id="details-status"></span></p>
   </div>
 
   <div id="board">
